# cargo-rootfs

./: Cargo.toml  README.md
src/: main.rs
